protect cors anywhere, add google sign in

--- a/authentication/user/templates/account/login.html
+++ b/authentication/user/templates/account/login.html
@@ -15,7 +15,7 @@
             <a href="{% provider_login_url 'google' %}" style="width:100%">
                 <img src="/accounts/static/btn_google_signin_dark_normal_web@2x.png" style="width:100%"/>
             </a>
-            <a href="{% provider_login_url 'apple' %}" id="apple-signin" style="width: 100%; margin-top: 16px">
+            <a href="{% provider_login_url 'apple' %}" id="apple-signin" style="display: none; width: 100%; margin-top: 16px">
                 <img src="/accounts/static/apple-id-minimum-corner-radii_2x.png" style="width: 100%" />
             </a>
         </div>
